# palautusrepositio

./: README.md
viikko1/nhl-statistics/: .coverage
viikko1/nhl-statistics/src/: index.py  player_reader.py  statistics_service.py
viikko1/nhl-statistics/src/tests/: statistics_service_test.py
viikko1/riippuvuuksien-injektointi/: .coverage
viikko1/riippuvuuksien-injektointi/src/tests/: laskin_test.py
viikko2/git-branch-harjoitus/: index.py  tulo.py
viikko2/nhl-reader/: .pylintrc
viikko2/nhl-reader/src/: index.py  player.py  player_reader.py  player_stats.py  ui.py
viikko2/poetry-web/: pyproject.toml
viikko3/: retro.md
viikko3/hello-robot/: log.html  output.xml  report.html
viikko3/hello-robot/src/: CounterLibrary.py
viikko3/login/: log.html  output.xml  report.html
viikko3/login/src/services/: user_service.py
viikko4/maksukortti-mock/src/: kassapaate.py
viikko4/tdd-ostoskori/src/: ostoskori.py
viikko4/verkkokauppa/: .coverage  sequence_diagram.md
viikko5/: review.md  vibe.md
viikko5/int-joukko/src/: int_joukko.py
viikko5/tennis/src/: tennis_game.py
viikko6/laskin/src/: kayttoliittyma.py  komentotehdas.py  sovelluslogiikka.py
viikko6/query-language/src/: index.py  matchers.py  querybuilder.py
viikko7/: agent.md
viikko7/kivi-paperi-sakset/: .coverage  TESTING.md  TEST_SUITE_SUMMARY.md  pyproject.toml  run_tests.sh
viikko7/kivi-paperi-sakset-original/src/: index.py  tekoaly_parannettu.py
viikko7/kivi-paperi-sakset/src/: index.py  kps.py  kps_parempi_tekoaly.py  kps_pelaaja_vs_pelaaja.py  kps_tekoaly.py  peli_palvelu.py  tekoaly.py  tekoaly_parannettu.py  tuomari.py  ui.py  viesti_muotoilija.py  web_app.py
viikko7/kivi-paperi-sakset/src/templates/: game.html  index.html
viikko7/kivi-paperi-sakset/tests/: README.md  __init__.py  conftest.py  test_kps.py  test_peli_palvelu.py  test_tuomari.py  test_viesti_muotoilija.py  test_web_app.py
(+6 files in other folders)
