[project]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = [
    {name = "Camilla Campbell",email = "camilla.campbell@helsinki.fi"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
]

[dependency-groups]
dev = [
    "flask (>=3.1.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
