[project]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = [
    {name = "Camilla Campbell",email = "camilla.campbell@helsinki.fi"}
]
requires-python = "^3.12"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)"
]

[dependency-groups]
dev = [
    "pylint (>=4.0.2,<5.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
